sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:10: error: not found: value &
      if (!plusPetitQue(a,v)){&
                              ^AlgInsertionSort:14: error: reassignment to val
      i=i-1 ;
       ^